gcc/testsuite/gcc.dg/uninit-13.c
@@ -5,6 +5,6 @@ typedef _Complex float C;
 C foo()
 {
   C f;
-  __imag__ f = 0;	/* { dg-warning "is used" "unconditional" } */
-  return f;
+  __imag__ f = 0;
+  return f;	/* { dg-warning "is used" "unconditional" } */
 }
